--- a/spec/support/vcr_cassettes/paypal_failure.yml
+++ b/spec/support/vcr_cassettes/paypal_failure.yml
@@ -32,7 +32,7 @@ http_interactions:
     uri: https://api-3t.sandbox.paypal.com/nvp
     body:
       encoding: UTF-8
-      string: user=jonny&pwd=12345&signature=54321&method=CreateRecurringPaymentsProfile&version=98&payerid=&profilestartdate=2013-01-01%2000%3A00%3A00%20%2B1300&desc=Up%20to%2010%20people%20(US%2430%20monthly)&billingperiod=Month&billingfrequency=1&amt=30&currencycode=USD&maxfailedpayments=3&autobilloutamt=AddToNextBilling&token=fake-token
+      string: user=jonny&pwd=12345&signature=54321&method=CreateRecurringPaymentsProfile&version=98&payerid=&profilestartdate=100&desc=Up%20to%2010%20people%20(US%2430%20monthly)&billingperiod=Month&billingfrequency=1&amt=30&currencycode=USD&maxfailedpayments=3&autobilloutamt=AddToNextBilling&token=fake-token
     headers: {}
   response:
     status:
@@ -54,4 +54,31 @@ http_interactions:
       string: TIMESTAMP=2013%2d07%2d30T23%3a45%3a45Z&CORRELATIONID=88bf4e672f80f&ACK=Failure&VERSION=98&BUILD=7084400&L_ERRORCODE0=10002&L_SHORTMESSAGE0=Security%20error&L_LONGMESSAGE0=Security%20header%20is%20not%20valid&L_SEVERITYCODE0=Error
     http_version: 
   recorded_at: Tue, 30 Jul 2013 23:45:45 GMT
+- request:
+    method: post
+    uri: https://api-3t.sandbox.paypal.com/nvp
+    body:
+      encoding: UTF-8
+      string: user=jonny&pwd=12345&signature=54321&method=CreateRecurringPaymentsProfile&version=98&payerid=&profilestartdate=&desc=Up%20to%2010%20people%20(US%2430%20monthly)&billingperiod=Month&billingfrequency=1&amt=30&currencycode=USD&maxfailedpayments=3&autobilloutamt=AddToNextBilling&token=fake-token
+    headers: {}
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Wed, 31 Jul 2013 10:00:25 GMT
+      Server:
+      - Apache
+      Content-Length:
+      - '229'
+      Connection:
+      - close
+      Content-Type:
+      - text/plain; charset=utf-8
+    body:
+      encoding: UTF-8
+      string: TIMESTAMP=2013%2d07%2d31T10%3a00%3a26Z&CORRELATIONID=e7c0cb0054ba0&ACK=Failure&VERSION=98&BUILD=7131708&L_ERRORCODE0=10002&L_SHORTMESSAGE0=Security%20error&L_LONGMESSAGE0=Security%20header%20is%20not%20valid&L_SEVERITYCODE0=Error
+    http_version: 
+  recorded_at: Wed, 31 Jul 2013 10:00:26 GMT
 recorded_with: VCR 2.5.0
