upate gem and tune results

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -5,3 +5,9 @@ search:
     - 'app/'
     - 'vendor/'
     - 'extras/'
+
+# do not report these keys as unused
+ignore_unused:
+  - simple_form.*
+  - devise.*
+  - datetime.*
